ejercicio consumo de apis

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /GraficaCircular/target/
 /GraficasDeBarras/target/
 /GraficaDeBarrasPorcentual/target/
+/BD_Administradores/target/
+/ConsumoApi/target/
