--- a/Adminisrador/pom.xml
+++ b/Adminisrador/pom.xml
@@ -11,6 +11,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>1</version>
         </dependency>
+        <dependency>
+            <groupId>itext</groupId>
+            <artifactId>itext</artifactId>
+            <version>5.12</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
